# raytracing

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  TODO.org
include/: bvhnode.h  camera.h  material.h  sphere.h  texture.h  trace.h
src/: aabb.cpp  aabb.h  bvhnode.cpp  camera.cpp  camera.h  checkerstexture.cpp  constanttexture.cpp  dielectric.cpp  diffuselight.cpp  geomgen.cpp  geomgen.h  hitobject.h  hitobjectlist.cpp  hitobjectlist.h  hitrecord.h  lambertian.cpp  main.cpp  material.h  metal.cpp  perlintexture.cpp  ray.cpp  ray.h  rect.cpp  rect.h  sphere.cpp  sphere.h  texture.h  trace.cpp  trace.h  utils.cpp  utils.h  utils.hpp
test/: ball_no_tex.cpp  book1_cover.cpp  lambertian_spheres.cpp  normal_spheres.cpp
